# RabbitTrim

./: .gitignore  CMakeLists.txt  README.md  makefile
adapter/: Simulate-Short-SE.fa  TruSeq-DNA-Free-PE.fa  TruSeq-DNA-Free-SE.fa  TruSeq-DNA-Free.fa  ktrim_adapter.fa  ktrim_adapter_se_long.fa  ktrim_adapter_se_medium.fa
include/: FastqNamePattern.h  Logger.h  PairingValidator.h  ThreadAssign.h  array_set.h  common.h  find_seed.h  param.h  se_handler.h  util.h
include/core/: HandlerPE.h  HandlerSE.h
include/handler/: HandlerPE.h  HandlerSE.h  WriterBuffer.h
include/trimlog/: TrimLogRecord.h  TrimStat.h  TrimStat2.h
include/trimmer/: .IlluminaShortClippingSeq.h.swp  AvgQualTrimmer.h  BaseCountTrimmer.h  CropTrimmer.h  HeadCropTrimmer.h  IlluminaClippingSeq.h  IlluminaClippingTrimmer.h  IlluminaLongClippingSeq.h  IlluminaMediumClippingSeq.h  IlluminaPrefixPair.h  IlluminaShortClippingSeq.h  LeadingTrimmer.h  LowQualityTrimmer.h  MaxLenTrimmer.h  MaximumInformationTrimmer.h  MinLenTrimmer.h  SeedClippingTrimmer.h  SlidingWindowTrimmer.h  TailCropTrimmer.h  ToPhred33Trimmer.h  ToPhred64Trimmer.h  TrailingTrimmer.h  Trimmer.h  TrimmerFactory.h
src/: FastqNamePattern.h  Logger.h  PairingValidator.h  RabbitTrim.cpp  array_set.h  common.h  find_seed  find_seed.cpp  find_seed.h  func_set.h  generate_array  generate_array.cpp  generate_func  generate_func.cpp  ktrim.cpp  param.h  param_handler.h  pe_handler.h  se_handler.h  util.h
src/core/: HandlerPE.cpp  HandlerPE.h  HandlerSE.cpp  HandlerSE.h
src/handler/: .HandlerSE.cpp.swp  HandlerPE.cpp  HandlerSE.cpp
src/io/: Buffer.h  DataPool.h  DataQueue.h  FastxStream.cpp  FastxStream.h  FileReader.h  Formater.cpp  Formater.h  Globals.h  Reference.h  verbos_Formater.cpp
src/other/: find_seed.cpp  generate_func.cpp
src/pigz/: pigz.cpp  pigz.h  yarn.c  yarn.h
src/pragzip/: CMakeLists.txt  ChunkData.hpp  IndexFileFormat.hpp  pragzip.cpp  pragzip.h
src/pragzip/blockfinder/precodecheck/: BruteForceLUT.hpp
src/pragzip/core/: BitReader.hpp  BitStringFinder.hpp  BlockFetcher.hpp  BlockMap.hpp  CMakeLists.txt  FileUtils.hpp  ParallelBitStringFinder.hpp  Prefetcher.hpp  TestHelpers.hpp
src/pragzip/core/filereader/: Buffered.hpp  Shared.hpp  Standard.hpp
src/trimlog/: TrimLogRecord.cpp  TrimLogRecord.h  TrimStat.cpp  TrimStat.h  TrimStat2.cpp
src/trimmer/: .IlluminaShortClippingSeq.cpp.swp  AvgQualTrimmer.cpp  AvgQualTrimmer.h  BaseCountTrimmer.cpp  BaseCountTrimmer.h  CropTrimmer.cpp  CropTrimmer.h  HeadCropTrimmer.cpp  HeadCropTrimmer.h  IlluminaClippingSeq.h  IlluminaClippingTrimmer.cpp  IlluminaClippingTrimmer.h  IlluminaLongClippingSeq.cpp  IlluminaLongClippingSeq.h  IlluminaMediumClippingSeq.cpp  IlluminaMediumClippingSeq.h  IlluminaPrefixPair.cpp  IlluminaPrefixPair.h  IlluminaShortClippingSeq.cpp  IlluminaShortClippingSeq.h  LeadingTrimmer.cpp  LeadingTrimmer.h  LowQualityTrimmer.cpp  MaxLenTrimmer.cpp  MaxLenTrimmer.h  MaximumInformationTrimmer.cpp  MaximumInformationTrimmer.h  MinLenTrimmer.cpp  MinLenTrimmer.h  SeedClippingTrimmer.cpp  SlidingWindowTrimmer.cpp  SlidingWindowTrimmer.h  TailCropTrimmer.cpp  TailCropTrimmer.h  ToPhred33Trimmer.cpp  ToPhred33Trimmer.h  ToPhred64Trimmer.cpp  ToPhred64Trimmer.h  TrailingTrimmer.cpp  TrailingTrimmer.h  (+3 more)
src/utils/: ThreadAssign.cpp  util.cpp
testing_dataset/: adapter.fa  check.accuracy.pl  simu.reads.pl
